Correction de typo GESSEH et de core_structure_new

--- a/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
+++ b/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'GessehCoreBundle::layout.html.twig' %}
+{% extends 'PigassCoreBundle::layout.html.twig' %}
 
 {% block headline %}Paramètres{% endblock %}
 
