--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -1,7 +1,7 @@
 /**
- * This file is part of GESSEH project
+ * This file is part of PIGASS project
  *
- * @author: Pierre-François Angrand <gesseh@medlibre.fr>
+ * @author: Pierre-François Angrand <pigass@medlibre.fr>
  * @copyright: Copyright 2013 Pierre-François Angrand
  * @license: GPLv3
  * See LICENSE file or http://www.gnu.org/licenses/gpl.html
