--- a/src/Pigass/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/layout.html.twig
@@ -8,10 +8,10 @@
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         {% if is_granted('ROLE_MEMBER') %}
             <div class="header">Membre</div>
-            {{ mopa_bootstrap_menu('student') }}
+            {{ mopa_bootstrap_menu('person') }}
         {% elseif is_granted('ROLE_STRUCTURE') %}
             <div class="header">Structure</div>
-            {{ mopa_bootstrap_menu('teacher') }}
+            {{ mopa_bootstrap_menu('structure') }}
         {% endif %}
         {% if is_granted('ROLE_ADMIN') %}
             <div class="header">Administation</div>
