Adaptation du layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,7 +45,7 @@
 {% block page_header %}
 <header id="header" class="row">
     <span class="hidden-xs col-sm-1">
-        {% block logo %}<a href="{{ path('core_structure_index') }}"><img src="{{ asset('bundles/pigasscore/images/entete.png') }}" alt="logo" /></a>{% endblock logo %}
+        {% block logo %}{% endblock logo %}
     </span>
     <h1 class="col-sm-4">{% block headline %}{% endblock headline %}</h1>
     <aside id="menu" class="col-sm-7">
@@ -81,7 +81,7 @@
     <li><a href="https://github.com/CaraGk/pigass/issues">Reporter un bug ou un souhait</a></li>
 </ul>
 <div class="miniature col-sm-6 col-xs-12">
-    <a href="https://github.com/CaraGk/pigass"><img src="{{ asset('bundles/pigasscore/images/pigass_logo_small.png') }}" alt="pigass" /></a> powered by <a href="http://symfony.com/"><img src="{{ asset('bundles/pigasscore/images/symfony_logo.png') }}" alt="symfony 2" /></a>
+    <a href="https://github.com/CaraGk/pigass"><img src="{{ asset('pigass_small.png') }}" alt="pigass" /></a> powered by <a href="http://symfony.com/"><img src="{{ asset('symfony_logo.png') }}" alt="symfony 2" /></a>
 </div>
 {% endblock footer %}
 
