--- a/src/Pigass/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/layout.html.twig
@@ -16,6 +16,12 @@
     {% endif %}
 {% endblock %}
 
+{% block logo %}
+    {% image '@PigassCoreBundle/Resources/public/images/pigass_medium.png' %}
+        <a href="{{ path('core_structure_index') }}"><img src="{{ asset_url }}" alt="logo" /></a>
+    {% endimage %}
+{% endblock logo %}
+
 {% block headline %}{% endblock %}
 
 {% block action %}{% endblock %}
