Correction de typo dans PigassCoreBundle:Structure:index

--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -16,7 +16,7 @@
             </li>
         {% else %}
             <li class="noentity structure">
-                Aucun stage à afficher
+                Aucune structure enregistrée. Contactez un administrateur.
             </li>
         {% endfor %}
     </ul>
