Prise en charge des locale pour Symfony3 et fos_user.login

--- a/src/Pigass/UserBundle/Resources/views/layout.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/layout.html.twig
@@ -1,5 +1,8 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
+{% block title %}{{ parent() }} - S'identifier{% endblock %}
+{% block headline %}S'identifier{% endblock %}
+
 {% block content %}
   {% block fos_user_content %}{% endblock %}
 {% endblock %}
