--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,12 +59,12 @@
 
 {% block content_row %}
 <div class="row">
-    <aside id="submenu">
+    <aside id="submenu" class="col-sm-2">
         <ul class="btn-group">
             {% block action %}{% endblock action %}
         </ul>
     </aside>
-    <section id="content" class="col-lg-10 col-sm-9 col-xs-12">
+    <section id="content" class="col-sm-10 col-xs-12">
         <div class="content">
             {% block content %}{% endblock content %}
         </div>
