--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -122,6 +122,8 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #content progress.bar::-webkit-progress-value { background-color: #75ff88; }
 #content li.tag { margin-bottom: 3px; }
 
+#submenu { padding: 10px; }
+#submenu ul, #submenu li { width: 100%; padding: 5px; }
 #submenu li a, #submenu li a:hover { text-decoration: none; }
 #submenu li.btn-primary a, #submenu li.btn-primary a:hover { color: #fff; }
 
