--- a/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
@@ -44,7 +44,7 @@
                     </ul>
                 </span>
 
-                {{ gateway.gatewayName }} ({{ gateway.factoryName }}) : {{ gateway.readableName }}
+                {{ gateway.gatewayName }} ({{ gateway.factoryName }}) : {{ gateway.Description }}
             </li>
         {% else %}
             <li class="noentity gateway">
