Correction de l'enregistrement

--- a/src/Pigass/UserBundle/Resources/views/Register/sendConfirmation.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/sendConfirmation.html.twig
@@ -3,7 +3,14 @@
 {% block headline %}Adhésion - Validation{% endblock %}
 
 {% block content %}
-    Un email de confirmation a été envoyé à l'adresse {{ email }}. Cliquez sur le lien présent dans l'email pour activer votre compte.
+    <div>Un email de confirmation a été envoyé à l'adresse {{ email }}. Cliquez sur le lien présent dans l'email pour activer votre compte.</div>
 
-    En cas de non-réception du mail, <a href="{{ path('user_register_confirmation_send', {'email': email}) }}">renvoyer la confirmation</a>.
+    <div>En cas de non-réception du mail, <a href="{{ path('user_register_confirmation_send', {'email': email, 'slug': slug}) }}">renvoyer la confirmation</a>.</div>
+
+    <div class="btn btn-primary">
+        <a href="{{ path('user_register_join', {'slug': slug}) }}" title="Finaliser l'adhésion">
+            Suivant {{ icon('arrow-right') }}
+        </a>
+    </div>
+
 {% endblock %}
