Affichage des adhésions

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,7 +60,7 @@
 {% block content_row %}
 <div class="row">
     <aside id="submenu" class="col-sm-2">
-        <ul class="btn-group">
+        <ul class="btn-group-vertical">
             {% block action %}{% endblock action %}
         </ul>
     </aside>
