--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -53,9 +53,12 @@
                         </ul>
                     </span>
 
-                    {{ structure.name }} ({{ structure.slug }})
+                    <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">{{ structure.name }}</a>
+                    ({{ structure.slug }})
                 {% elseif not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <a href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">{{ structure.name }}</a>
+                {% elseif is_granted('ROLE_MEMBER') %}
+                    <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">{{ structure.name }}</a>
                 {% endif %}
             </li>
         {% else %}
