Amélioration des template de connexion et du menu

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,7 +1,9 @@
 {% extends "PigassCoreBundle::layout.html.twig" %}
 
 {% block title %}Erreur : {{ status_text }}{% endblock %}
-{% block titlecontent %}Oups ! Une erreur est survenue !{% endblock %}
+
+{% block headline %}Erreur {{ status_code }}{% endblock %}
+
 {% block content %}
     <div>Le serveur a retourné une erreur "{{ status_code }} {{ status_text }}".</div>
 {% endblock %}
