--- a/src/Pigass/UserBundle/Resources/views/layout.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
-{% block title %}{{ parent() }} - S'identifier{% endblock %}
-{% block headline %}S'identifier{% endblock %}
+{% block title %}{{ parent() }} - Utilisateur {% endblock %}
+{% block headline %}Utilisateur{% endblock %}
 
 {% block content %}
   {% block fos_user_content %}{% endblock %}
